--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <!-- Versions for optional dependencies -->
 
     <!-- Versions for test dependencies -->
+    <embedded-eureka.version>0.1.0</embedded-eureka.version>
 
     <!-- Versions for plugins -->
 
@@ -169,6 +170,18 @@
     </dependency>
 
     <!-- Test dependencies -->
+    <dependency>
+      <groupId>org.kiwiproject</groupId>
+      <artifactId>embedded-eureka</artifactId>
+      <version>${embedded-eureka.version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.kiwiproject</groupId>
+          <artifactId>kiwi</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
 
   </dependencies>
 </project>
