--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
     <kiwi.version>0.11.0</kiwi.version>
 
     <!-- Versions for provided dependencies -->
+    <commons-collections.version>4.4</commons-collections.version>
+    <guava-retrying.version>2.0.0</guava-retrying.version>
     <hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
     <jakarta.activation-api.version>1.2.2</jakarta.activation-api.version>
     <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
@@ -59,6 +61,13 @@
     </dependency>
 
     <!-- Provided dependencies -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>${commons-collections.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-core</artifactId>
@@ -105,6 +114,23 @@
         <exclusion>
           <groupId>joda-time</groupId>
           <artifactId>joda-time</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.rholder</groupId>
+      <artifactId>guava-retrying</artifactId>
+      <version>${guava-retrying.version}</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.google.code.findbugs</groupId>
+          <artifactId>jsr305</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
