--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <kiwi.version>0.11.0</kiwi.version>
 
     <!-- Versions for provided dependencies -->
+    <consul-client.version>1.4.2</consul-client.version>
     <guava-retrying.version>2.0.0</guava-retrying.version>
     <hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
     <jakarta.activation-api.version>1.2.2</jakarta.activation-api.version>
@@ -38,6 +39,7 @@
     <jakarta.xml.bind-api>2.3.3</jakarta.xml.bind-api>
     <jersey.version>2.31</jersey.version>
     <metrics-servlet.version>4.1.11</metrics-servlet.version>
+    <okhttp.version>3.12.2</okhttp.version>
 
     <!-- Versions for optional dependencies -->
 
@@ -60,6 +62,64 @@
     </dependency>
 
     <!-- Provided dependencies -->
+    <dependency>
+      <groupId>com.orbitz.consul</groupId>
+      <artifactId>consul-client</artifactId>
+      <version>${consul-client.version}</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+          <artifactId>jackson-datatype-guava</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+          <artifactId>jackson-datatype-jdk8</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>com.google.code.findbugs</groupId>
+          <artifactId>jsr305</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>com.squareup.okhttp3</groupId>
+          <artifactId>okhttp</artifactId>
+        </exclusion>
+
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
     <dependency>
       <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-core</artifactId>
@@ -185,6 +245,13 @@
           <artifactId>jackson-databind</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>${okhttp.version}</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Test dependencies -->
