Retrofit with StandardExceptionTests from kiwi-test (#28)
* Retrofit with StandardExceptionTests from kiwi-test

* Add kiwi-test 0.6.0 dependency
* Remove local StandardExceptionTests in this project; replace with
  the one in kiwi-test 0.6.0

Fixes #5

* Update pom.xml

Co-authored-by: Chris Rohr <51920+chrisrohr@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <embedded-consul.version>2.2.0</embedded-consul.version>
     <embedded-eureka.version>0.2.0</embedded-eureka.version>
     <groovy.version>2.5.13</groovy.version>
+    <kiwi-test.version>0.6.0</kiwi-test.version>
 
     <!-- Versions for plugins -->
 
@@ -258,6 +259,14 @@
     </dependency>
 
     <!-- Test dependencies -->
+
+    <dependency>
+      <groupId>org.kiwiproject</groupId>
+      <artifactId>kiwi-test</artifactId>
+      <version>${kiwi-test.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
@@ -297,6 +306,10 @@
         <exclusion>
           <groupId>org.kiwiproject</groupId>
           <artifactId>kiwi</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.kiwiproject</groupId>
+          <artifactId>kiwi-test</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
