--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
     <jakarta.xml.bind-api>2.3.3</jakarta.xml.bind-api>
     <jersey.version>2.31</jersey.version>
-    <metrics-servlet.version>4.1.11</metrics-servlet.version>
+    <metrics-servlet.version>4.1.12.1</metrics-servlet.version>
     <okhttp.version>3.12.2</okhttp.version>
 
     <!-- Versions for optional dependencies -->
@@ -304,12 +304,24 @@
       <scope>test</scope>
       <exclusions>
         <exclusion>
+          <groupId>io.dropwizard</groupId>
+          <artifactId>dropwizard-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.dropwizard</groupId>
+          <artifactId>dropwizard-jackson</artifactId>
+        </exclusion>
+        <exclusion>
           <groupId>org.kiwiproject</groupId>
           <artifactId>kiwi</artifactId>
         </exclusion>
         <exclusion>
           <groupId>org.kiwiproject</groupId>
           <artifactId>kiwi-test</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.dropwizard.metrics</groupId>
+          <artifactId>metrics-servlets</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
