--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
     <jakarta.xml.bind-api>2.3.3</jakarta.xml.bind-api>
     <jersey.version>2.31</jersey.version>
-    <metrics-servlet.version>4.1.11</metrics-servlet.version>
+    <metrics-servlet.version>4.1.12.1</metrics-servlet.version>
     <okhttp.version>3.12.2</okhttp.version>
 
     <!-- Versions for optional dependencies -->
@@ -46,7 +46,7 @@
     <!-- Versions for test dependencies -->
     <ant.version>1.10.8</ant.version>
     <embedded-consul.version>2.2.0</embedded-consul.version>
-    <embedded-eureka.version>0.2.0</embedded-eureka.version>
+    <embedded-eureka.version>0.3.0</embedded-eureka.version>
     <groovy.version>2.5.13</groovy.version>
     <kiwi-test.version>0.7.0</kiwi-test.version>
 
@@ -153,6 +153,24 @@
         <exclusion>
           <groupId>jakarta.xml.bind</groupId>
           <artifactId>jakarta.xml.bind-api</artifactId>
+        </exclusion>
+
+        <!-- TODO: Remove these when upgrading dropwizard to 2.0.13 -->
+        <exclusion>
+          <groupId>io.dropwizard.metrics</groupId>
+          <artifactId>metrics-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.dropwizard.metrics</groupId>
+          <artifactId>metrics-healthchecks</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.dropwizard.metrics</groupId>
+          <artifactId>metrics-jvm</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.dropwizard.metrics</groupId>
+          <artifactId>metrics-servlets</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -310,6 +328,16 @@
         <exclusion>
           <groupId>org.kiwiproject</groupId>
           <artifactId>kiwi-test</artifactId>
+        </exclusion>
+
+        <!-- TODO: Remove when dropwizard is upgraded to 2.0.13 -->
+        <exclusion>
+          <groupId>io.dropwizard</groupId>
+          <artifactId>dropwizard-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.dropwizard</groupId>
+          <artifactId>dropwizard-jackson</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
