--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <!-- Versions for test dependencies -->
         <ant.version>1.10.8</ant.version>
         <embedded-consul.version>2.2.0</embedded-consul.version>
-        <embedded-eureka.version>0.7.0</embedded-eureka.version>
+        <embedded-eureka.version>0.8.1-SNAPSHOT</embedded-eureka.version>
         <groovy.version>2.5.13</groovy.version>
         <kiwi-test.version>0.12.0</kiwi-test.version>
 
