--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <properties>
         <!-- Versions for required dependencies -->
         <dropwizard.version>2.0.16</dropwizard.version>
-        <kiwi.version>0.17.0</kiwi.version>
+        <kiwi.version>0.18.0</kiwi.version>
 
         <!-- Versions for provided dependencies -->
         <consul-client.version>1.4.2</consul-client.version>
@@ -49,7 +49,7 @@
         <embedded-consul.version>2.2.0</embedded-consul.version>
         <embedded-eureka.version>0.8.1-SNAPSHOT</embedded-eureka.version>
         <groovy.version>2.5.13</groovy.version>
-        <kiwi-test.version>0.12.0</kiwi-test.version>
+        <kiwi-test.version>0.13.0</kiwi-test.version>
 
         <!-- Versions for plugins -->
 
@@ -300,6 +300,16 @@
                     <groupId>commons-lang</groupId>
                     <artifactId>commons-lang</artifactId>
                 </exclusion>
+
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -308,6 +318,17 @@
             <artifactId>embedded-eureka</artifactId>
             <version>${embedded-eureka.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.module</groupId>
+                    <artifactId>jackson-module-jaxb-annotations</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>joda-time</groupId>
+                    <artifactId>joda-time</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
