--- a/pom.xml
+++ b/pom.xml
@@ -28,18 +28,19 @@
     <properties>
         <!-- Versions for required dependencies -->
         <dropwizard.version>2.0.19</dropwizard.version>
-        <kiwi.version>0.18.0</kiwi.version>
+        <kiwi.version>0.19.0</kiwi.version>
 
         <!-- Versions for provided dependencies -->
         <consul-client.version>1.4.2</consul-client.version>
         <guava-retrying.version>2.0.0</guava-retrying.version>
-        <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
+        <hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
+        <jackson.version>2.10.5.1</jackson.version>
         <jakarta.activation-api.version>1.2.2</jakarta.activation-api.version>
         <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
         <jakarta.xml.bind-api>2.3.3</jakarta.xml.bind-api>
-        <jersey.version>2.32</jersey.version>
-        <metrics-jetty9.version>4.1.16</metrics-jetty9.version>
-        <metrics-servlet.version>4.1.16</metrics-servlet.version>
+        <jersey.version>2.33</jersey.version>
+        <metrics-jetty9.version>4.1.17</metrics-jetty9.version>
+        <metrics-servlet.version>4.1.17</metrics-servlet.version>
         <okhttp.version>3.12.2</okhttp.version>
 
         <!-- Versions for optional dependencies -->
@@ -47,9 +48,9 @@
         <!-- Versions for test dependencies -->
         <ant.version>1.10.8</ant.version>
         <embedded-consul.version>2.2.0</embedded-consul.version>
-        <embedded-eureka.version>0.8.1</embedded-eureka.version>
+        <embedded-eureka.version>0.9.0</embedded-eureka.version>
         <groovy.version>2.5.13</groovy.version>
-        <kiwi-test.version>0.13.0</kiwi-test.version>
+        <kiwi-test.version>0.14.0</kiwi-test.version>
 
         <!-- Versions for plugins -->
 
@@ -140,6 +141,10 @@
                     <artifactId>hibernate-validator</artifactId>
                 </exclusion>
                 <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>jakarta.activation</groupId>
                     <artifactId>jakarta.activation-api</artifactId>
                 </exclusion>
@@ -161,8 +166,41 @@
                     <artifactId>guava</artifactId>
                 </exclusion>
                 <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>joda-time</groupId>
                     <artifactId>joda-time</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-jersey</artifactId>
+            <version>${dropwizard.version}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>jakarta.activation</groupId>
+                    <artifactId>jakarta.activation-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>jakarta.annotation</groupId>
+                    <artifactId>jakarta.annotation-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jersey.core</groupId>
+                    <artifactId>jersey-server</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -195,6 +233,13 @@
                     <artifactId>classmate</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
