--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,6 @@
 
         <!-- Versions for provided dependencies -->
         <consul-client.version>1.4.2</consul-client.version>
-        <guava-retrying.version>2.0.0</guava-retrying.version>
         <hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
         <jackson.version>2.10.5.1</jackson.version>
         <jakarta.activation-api.version>1.2.2</jakarta.activation-api.version>
@@ -42,6 +41,7 @@
         <metrics-jetty9.version>4.1.18</metrics-jetty9.version>
         <metrics-servlet.version>4.1.18</metrics-servlet.version>
         <okhttp.version>3.12.2</okhttp.version>
+        <re-retrying.version>3.0.0</re-retrying.version>
 
         <!-- Versions for optional dependencies -->
 
@@ -206,18 +206,14 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.rholder</groupId>
-            <artifactId>guava-retrying</artifactId>
-            <version>${guava-retrying.version}</version>
+            <groupId>tech.huffman.re-retrying</groupId>
+            <artifactId>re-retrying</artifactId>
+            <version>${re-retrying.version}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.google.code.findbugs</groupId>
-                    <artifactId>jsr305</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
