Fix compile errors due to embedded-eureka updates; misc cleanup
* Fix the compile errors that occurred when updating to embedded-eureka
  0.12.0, specifically registeredApplications() was renamed to
  getRegisteredApplications() and cleanupApps() method was renamed to
  clearRegisteredApps().
* Switch from re-retrying library to retrying-again since that changed
  in kiwi 0.21.0, and fix various breaking changes such as
  KiwiRetryerPredicates now using Exception not Throwable, and using
  the Java/JDK Predicate instead of Guava's.
* Fix breaking test in EurekaRegistryClientTest due to the switch to
  retrying-again; Retryer no longer throws an ExecutionException so
  the cause of the KiwiRetryerException should be RetryException
* Use the helper methods now in EurekaServerExtension as of
  embedded-eureka 0.12.0 to avoid all the repeated calls to
  getEurekaServer().getRegistry()

Closes #105
Closes #111

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <metrics-jetty9.version>4.1.18</metrics-jetty9.version>
         <metrics-servlet.version>4.1.18</metrics-servlet.version>
         <okhttp.version>3.12.2</okhttp.version>
-        <re-retrying.version>3.0.0</re-retrying.version>
+        <retrying-again.version>0.5.0</retrying-again.version>
 
         <!-- Versions for optional dependencies -->
 
@@ -69,6 +69,12 @@
             <groupId>org.kiwiproject</groupId>
             <artifactId>kiwi</artifactId>
             <version>${kiwi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kiwiproject</groupId>
+            <artifactId>retrying-again</artifactId>
+            <version>${retrying-again.version}</version>
         </dependency>
 
         <!-- Provided dependencies -->
@@ -201,19 +207,6 @@
                 <exclusion>
                     <groupId>org.glassfish.jersey.core</groupId>
                     <artifactId>jersey-server</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>tech.huffman.re-retrying</groupId>
-            <artifactId>re-retrying</artifactId>
-            <version>${re-retrying.version}</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
