Fix dependency convergence

--- a/pom.xml
+++ b/pom.xml
@@ -380,6 +380,16 @@
                     <groupId>joda-time</groupId>
                     <artifactId>joda-time</artifactId>
                 </exclusion>
+
+                <!-- Don't let embedded-eureka junit version cause dependency convergence error -->
+                <exclusion>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
