--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.kiwiproject</groupId>
         <artifactId>kiwi-parent</artifactId>
-        <version>1.5.0</version>
+        <version>1.6.0</version>
     </parent>
 
     <artifactId>service-discovery-client</artifactId>
@@ -28,9 +28,10 @@
     <properties>
         <!-- Versions for required dependencies -->
         <kiwi.version>1.1.1-SNAPSHOT</kiwi.version>
+        <kiwi-bom.version>0.4.0-SNAPSHOT</kiwi-bom.version>
 
         <!-- Versions for provided dependencies -->
-        <retrying-again.version>1.0.2-SNAPSHOT</retrying-again.version>
+        <retrying-again.version>1.0.4-SNAPSHOT</retrying-again.version>
 
         <!-- Versions for test dependencies -->
         <embedded-eureka.version>1.0.2-SNAPSHOT</embedded-eureka.version>
@@ -47,7 +48,7 @@
             <dependency>
                 <groupId>org.kiwiproject</groupId>
                 <artifactId>kiwi-bom</artifactId>
-                <version>0.1.0-SNAPSHOT</version>
+                <version>${kiwi-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
