--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>retrying-again</artifactId>
             <version>${retrying-again.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
 
         <!-- Provided dependencies -->
 
@@ -109,6 +114,12 @@
             <groupId>org.kiwiproject</groupId>
             <artifactId>embedded-eureka</artifactId>
             <version>${embedded-eureka.version}</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
 
