--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <!-- Versions for test dependencies -->
         <embedded-eureka.version>1.0.7</embedded-eureka.version>
         <kiwi-test.version>2.1.0</kiwi-test.version>
+        <test-containers.version>1.17.3</test-containers.version>
 
         <!-- Sonar properties -->
         <sonar.projectKey>kiwiproject_service-discovery-client</sonar.projectKey>
@@ -120,6 +121,20 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${test-containers.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${test-containers.version}</version>
             <scope>test</scope>
         </dependency>
 
