Change Dockerfile to download eureka instead of loading war from disk

--- a/src/test/resources/eureka-server/Dockerfile
+++ b/src/test/resources/eureka-server/Dockerfile
@@ -1,10 +1,11 @@
 FROM netflixoss/tomcat:7.0.64
 
-RUN mkdir -p /tomcat/webapps/eureka
-
-ADD eureka-server-1.10.17.war /tomcat/webapps/eureka/
-
-RUN cd /tomcat/webapps/eureka && jar xf eureka-server-1.10.17.war && rm eureka-server-1.10.17.war
+RUN cd /tomcat/webapps &&\
+  mkdir eureka &&\
+  cd eureka &&\
+  wget -q https://repo1.maven.org/maven2/com/netflix/eureka/eureka-server/1.10.17/eureka-server-1.10.17.war &&\
+  jar xf eureka-server-1.10.17.war &&\
+  rm eureka-server-1.10.17.war
 
 ADD config.properties /tomcat/webapps/eureka/WEB-INF/classes/config.properties
 ADD eureka-client-test.properties /tomcat/webapps/eureka/WEB-INF/classes/eureka-client-test.properties
