--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
         <retrying-again.version>1.0.9</retrying-again.version>
 
         <!-- Versions for test dependencies -->
-        <embedded-eureka.version>1.0.7</embedded-eureka.version>
         <kiwi-test.version>2.1.0</kiwi-test.version>
+        <test-containers.version>1.17.3</test-containers.version>
 
         <!-- Sonar properties -->
         <sonar.projectKey>kiwiproject_service-discovery-client</sonar.projectKey>
@@ -109,17 +109,24 @@
             <artifactId>embedded-consul</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.kiwiproject</groupId>
-            <artifactId>embedded-eureka</artifactId>
-            <version>${embedded-eureka.version}</version>
-            <scope>test</scope>
-        </dependency>
         
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${test-containers.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${test-containers.version}</version>
             <scope>test</scope>
         </dependency>
 
