Switch Consul tests to use Testcontainers
* Consul integration tests now use the Consul Testcontainers module
* Remove embedded-consul test dependency and ConsulStarterHelper utility

Closes #261

--- a/pom.xml
+++ b/pom.xml
@@ -111,12 +111,6 @@
             <version>${kiwi-test.version}</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>com.pszymczyk.consul</groupId>
-            <artifactId>embedded-consul</artifactId>
-            <scope>test</scope>
-        </dependency>
         
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -133,6 +127,12 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>consul</artifactId>
             <scope>test</scope>
         </dependency>
 
