--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
                 <artifactId>kiwi-test</artifactId>
                 <version>${kiwi-test.version}</version>
             </dependency>
+            
+            <dependency>
+                <groupId>org.kiwiproject</groupId>
+                <artifactId>retrying-again</artifactId>
+                <version>${retrying-again.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.testcontainers</groupId>
@@ -86,7 +92,6 @@
         <dependency>
             <groupId>org.kiwiproject</groupId>
             <artifactId>retrying-again</artifactId>
-            <version>${retrying-again.version}</version>
         </dependency>
         
         <dependency>
